--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <div class="banner-top"></div>
 
-    <div class="container-fluid p-5">
+    <div class="container">
       <header>
         <h1>BTS</h1>
         <h2>방탄소년단</h2>
@@ -53,12 +53,12 @@
                   <h4 class="card-title mb-3">The group...</h4>
                   <p class="card-text m-0">
                     <strong>BTS</strong> (Korean: 방탄소년단; romanization:
-                    Bangtan Sonyeondan, lit. Bulletproof Boy Scouts), is a South
-                    Korean boy band consisting of 7 members, namely:
-                    <strong>RM</strong>, <strong>Jin</strong>,
-                    <strong>SUGA</strong>, <strong>j-hope</strong>,
-                    <strong>Jimin</strong>, <strong>V</strong> and
-                    <strong>Jung Kook</strong>.
+                    Bangtan Sonyeondan, lit. Bulletproof Boy Scouts - but also
+                    called Beyond The Scene), is a South Korean boy band
+                    consisting of 7 members, namely: <strong>RM</strong>,
+                    <strong>Jin</strong>, <strong>SUGA</strong>,
+                    <strong>j-hope</strong>, <strong>Jimin</strong>,
+                    <strong>V</strong> and <strong>Jung Kook</strong>.
                   </p>
                 </div>
               </div>
@@ -629,10 +629,18 @@
       <a
         href="https://github.com/IfiZa/BTS.git"
         alt="GitHub link"
+        class="hosting-link"
         target="_blank"
         >GitHub</a
       >
-      open source code by IfiZamb
+      open source code by IfiZamb, hosted on
+      <a
+        href="https://cozy-tapioca-899a13.netlify.app"
+        alt="Netlify link"
+        class="hosting-link"
+        target="_blank"
+        >Netlify</a
+      >
     </footer>
   </body>
 </html>
