--- a/index.html
+++ b/index.html
@@ -153,14 +153,26 @@
               <div class="card mt-4 mb-5">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their state of play...</h4>
-                  <p class="card-text m-0">
+                  <p class="card-text m-0 mb-3">
                     They are currently on a pause from their group activities
                     and focusing on their individual projects, while Jin has
                     already enlisted for the mandatory South Korean military
-                    service, and J-Hope will be the next one to follow shortly.
-                    Their much waited reunion is foreseen for 2025, and, we,
-                    ARMY, can't wait!!!
+                    service, and j-hope will be the next one to follow. Their
+                    much waited reunion is foreseen for 2025, and, we, ARMY,
+                    can't wait! And "...the best is YET TO COME"!
                   </p>
+                  <div class="card-img-bottom h-50">
+                    <iframe
+                      style="border-radius: 12px"
+                      src="https://open.spotify.com/embed/track/10SRMwb9EuVS1K9rYsBfHQ?utm_source=generator"
+                      width="100%"
+                      height="152"
+                      frameborder="0"
+                      allowfullscreen=""
+                      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                      loading="lazy"
+                    ></iframe>
+                  </div>
                 </div>
               </div>
             </div>
