--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                   </p>
                 </div>
               </div>
-              <div class="card mt-4 mb-5">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their accolades...</h4>
                   <p class="card-text m-0">
@@ -150,7 +150,7 @@
                   />
                 </div>
               </div>
-              <div class="card mt-4 mb-5">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their state of play...</h4>
                   <p class="card-text m-0 mb-3">
@@ -214,7 +214,7 @@
                 </div>
               </div>
 
-              <div class="card mt-4 mb-5">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">And you?..</h4>
                   <p class="card-text m-0">Still not an ARMY?</p>
