--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             data-masonry='{"percentPosition": true }'
           >
             <div class="col">
-              <div class="card">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">The group...</h4>
                   <p class="card-text m-0">
@@ -130,7 +130,7 @@
             </div>
 
             <div class="col">
-              <div class="card">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their logo...</h4>
                   <img
@@ -158,7 +158,7 @@
                     and focusing on their individual projects, while Jin has
                     already enlisted for the mandatory South Korean military
                     service, and j-hope will be the next one to follow. Their
-                    much waited reunion is foreseen for 2025, and, we, ARMY,
+                    much awaited reunion is foreseen for 2025, and, we, ARMY,
                     can't wait! And "...the best is YET TO COME"!
                   </p>
                   <div class="card-img-bottom h-50">
@@ -178,7 +178,7 @@
             </div>
 
             <div class="col">
-              <div class="card">
+              <div class="card mt-4">
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their debut...</h4>
                   <p class="card-text m-0 mb-3">
