--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                   <img
                     src="./img/logo_bts_army.jpg"
                     alt="Current ARMY logo"
-                    class="card-img-bottom h-100"
+                    class="card-img-bottom"
                   />
                 </div>
               </div>
