--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         cursor: url(./img/cursor.svg), pointer;
         font-family: "Open Sans", sans-serif;
       }
+
       h1 {
         text-align: center;
         font-size: 180px;
@@ -50,6 +51,7 @@
         font-weight: lighter;
         margin-bottom: 50px;
       }
+
       h3 {
         font-size: 32px;
         font-weight: 900;
@@ -76,6 +78,7 @@
         text-align: center;
         margin: 30px auto 15px;
       }
+
       .banner-top {
         background-image: url(./img/bts_banner.jpg);
         background-repeat: no-repeat;
@@ -87,6 +90,7 @@
         box-shadow: inset 0px -80px 30px 22px #fff;
         margin: 0 auto;
       }
+
       .container {
         width: 80%;
         padding: 0 40px 40px 40px;
@@ -107,6 +111,7 @@
         height: 1px;
         background-color: rgb(14, 1, 24);
       }
+
       .intro-cards {
         margin: 15px;
         padding: 20px;
@@ -128,11 +133,13 @@
         color: #0e0118;
         text-decoration: none;
       }
+
       .magazine-link:hover {
         color: #0e0118;
         text-decoration: underline;
         text-shadow: 1px 1px rgba(115, 28, 153, 0.3);
       }
+
       .photo {
         max-width: 115px;
         border: solid 0.5px rgba(115, 28, 153);
@@ -145,6 +152,16 @@
         transform: translateY(-10px);
         box-shadow: 0px 20px 40px 0px rgba(115, 28, 153, 0.35);
       }
+
+      .poll {
+        margin: 30px auto;
+        width: 70%;
+      }
+
+      .connect {
+        margin-bottom: 30px;
+      }
+
       .connect-icon {
         width: 50px;
         border-radius: 5px;
@@ -707,7 +724,7 @@
           <h3>connect</h3>
           <span class="divider"></span>
         </div>
-        <div class="row row-cols-7 g-3 text-center">
+        <div class="row row-cols-7 g-3 mt-3 mb-3 text-center">
           <div class="col">
             <a href="https://ibighit.com/bts/kor/" target="_blank">
               <img
