--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                   <p class="card-text m-0">
                     Almost 10 years since their debut, the group has uncountable
                     accolades from repeated number-one songs in charts around
-                    the world, concequent sold-out concerts, numerous awards,
-                    Grammy nominations, S Korea's and major brands'
+                    the world, consequent sold-out concerts, numerous awards,
+                    Grammy nominations, S. Korea's and major brands'
                     ambassadoring to addressing, thrice, the United Nations
                     General Assembly!
                   </p>
@@ -799,9 +799,9 @@
         alt="GitHub link"
         class="hosting-link"
         target="_blank"
-        >GitHub</a
+        >GitHub open source code</a
       >
-      open source code by IfiZamb, hosted on
+      by IfiZamb, hosted on
       <a
         href="https://cozy-tapioca-899a13.netlify.app"
         alt="Netlify link"
