Change img sources

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
           rgb(115, 28, 153) 110%
         );
         color: #0e0118;
-        cursor: url(./img/cursor.svg), pointer;
+        cursor: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/974/original/icons8-purple-heart-48.png?1678552636"),
+          pointer;
         font-family: "Open Sans", sans-serif;
       }
 
@@ -80,7 +81,7 @@
       }
 
       .banner-top {
-        background-image: url(./img/bts_banner.jpg);
+        background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/954/original/bts_banner.jpg?1678548882");
         background-repeat: no-repeat;
         background-size: 90%;
         background-position-x: center;
@@ -290,7 +291,7 @@
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Their logo...</h4>
                   <img
-                    src="./img/logo_bts.jpg"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/972/original/logo_bts.jpg?1678551165"
                     alt="Current BTS logo"
                     class="card-img-bottom"
                   />
@@ -300,7 +301,7 @@
                 <div class="card-body m-3">
                   <h4 class="card-title mb-3">Our logo...</h4>
                   <img
-                    src="./img/logo_bts_army.jpg"
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/973/original/logo_bts_army.jpg?1678551171"
                     alt="Current ARMY logo"
                     class="card-img-bottom"
                   />
@@ -411,7 +412,7 @@
         <div class="row row-cols-7 p-3 g-2 mt-2 mb-4">
           <div class="col text-center">
             <img
-              src="./img/rm.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/955/original/rm.jpg?1678548927"
               alt="Member's stage name: RM"
               class="photo"
             />
@@ -451,7 +452,7 @@
 
           <div class="col text-center">
             <img
-              src="./img/jin.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/956/original/jin.jpg?1678549693"
               alt="Member's stage name: Jin"
               class="photo"
             />
@@ -490,7 +491,7 @@
           </div>
           <div class="col text-center">
             <img
-              src="./img/suga.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/959/original/suga.jpg?1678550695"
               alt="Member's stage name: Suga"
               class="photo"
             />
@@ -530,7 +531,7 @@
 
           <div class="col text-center">
             <img
-              src="./img/hobi.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/960/original/jhope.jpg?1678550733"
               alt="Member's stage name: j-hope"
               class="photo"
             />
@@ -570,7 +571,7 @@
 
           <div class="col text-center">
             <img
-              src="./img/jimin.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/962/original/jimin.jpg?1678550777"
               alt="Member's stage name: Jimin"
               class="photo"
             />
@@ -609,7 +610,11 @@
           </div>
 
           <div class="col text-center">
-            <img src="./img/v.jpg" alt="Member's stage name: V" class="photo" />
+            <img
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/963/original/v.jpg?1678550787"
+              alt="Member's stage name: V"
+              class="photo"
+            />
             <ul class="profile">
               <li>
                 <u>Stage Name</u>
@@ -646,7 +651,7 @@
 
           <div class="col text-center">
             <img
-              src="./img/jk.jpg"
+              src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/964/original/jk.jpg?1678550798"
               alt="Member's stage name: JungKook"
               class="photo"
             />
@@ -728,7 +733,7 @@
           <div class="col">
             <a href="https://ibighit.com/bts/kor/" target="_blank">
               <img
-                src="./img/icons8-bts-logo.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/965/original/icons8-bts-logo.png?1678551091"
                 alt="BTS bighit official website"
                 class="connect-icon"
             /></a>
@@ -736,7 +741,7 @@
           <div class="col">
             <a href="https://weverse.io/bts/feed" target="_blank">
               <img
-                src="./img/icons8-weverse.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/966/original/icons8-weverse.png?1678551102"
                 alt="BTS weverse website"
                 class="connect-icon"
             /></a>
@@ -747,7 +752,7 @@
               target="_blank"
             >
               <img
-                src="./img/icons8-youtube.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/967/original/icons8-youtube.png?1678551114"
                 alt="BTS youtube channel"
                 class="connect-icon"
             /></a>
@@ -758,7 +763,7 @@
               target="_blank"
             >
               <img
-                src="./img/icons8-spotify.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/968/original/icons8-spotify.png?1678551120"
                 alt="BTS spotify channel"
                 class="connect-icon"
             /></a>
@@ -766,7 +771,7 @@
           <div class="col">
             <a href="https://twitter.com/BTS_bighit" target="_blank">
               <img
-                src="./img/icons8-twitter.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/969/original/icons8-twitter.png?1678551127"
                 alt="BTS twitter account"
                 class="connect-icon"
             /></a>
@@ -777,7 +782,7 @@
               target="_blank"
             >
               <img
-                src="./img/icons8-tiktok.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/970/original/icons8-tiktok.png?1678551134"
                 alt="BTS TikTok account"
                 class="connect-icon"
             /></a>
@@ -785,7 +790,7 @@
           <div class="col">
             <a href="https://www.facebook.com/bangtan.official" target="_blank">
               <img
-                src="./img/icons8-facebook.png"
+                src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/070/971/original/icons8-facebook.png?1678551151"
                 alt="BTS Facebook account"
                 class="connect-icon"
             /></a>
