--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                   <p class="card-text m-0">
                     <strong>BTS</strong> (Korean: 방탄소년단; romanization:
                     Bangtan Sonyeondan, lit. Bulletproof Boy Scouts - but also
-                    called Beyond The Scene), is a South Korean boy band
+                    found as Beyond The Scene), is a South Korean boy band
                     consisting of 7 members, namely: <strong>RM</strong>,
                     <strong>Jin</strong>, <strong>SUGA</strong>,
                     <strong>j-hope</strong>, <strong>Jimin</strong>,
