added padding in section

--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@
           <h3>connect</h3>
           <span class="divider"></span>
         </div>
-        <div class="row row-cols-7 g-3 mt-3 mb-3 text-center">
+        <div class="row row-cols-7 g-3 mt-3 mb-3 p-3 text-center">
           <div class="col">
             <a href="https://ibighit.com/bts/kor/" target="_blank">
               <img
