css and text updates

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       }
 
       .photo {
-        max-width: 115px;
+        max-width: 110px;
         border: solid 0.5px rgba(115, 28, 153);
         border-radius: 20%;
         box-shadow: 1px 3px 8px 1px rgba(115, 28, 153, 0.8);
@@ -465,7 +465,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>RM (아르엠)</strong>
+                <strong>RM</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -505,7 +505,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>Jin (진)</strong>
+                <strong>Jin</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -544,7 +544,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>SUGA (슈가)</strong>
+                <strong>SUGA</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -584,7 +584,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>j-hope (제이홉)</strong>
+                <strong>j-hope</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -624,7 +624,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>Jimin (지민)</strong>
+                <strong>Jimin</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -664,7 +664,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>V (뷔)</strong>
+                <strong>V</strong>
               </li>
               <li>
                 <u>Birth Name</u>
@@ -704,7 +704,7 @@
               <li>
                 <u>Stage Name</u>
                 <br />
-                <strong>Jung Kook (정국)</strong>
+                <strong>Jung Kook</strong>
               </li>
               <li>
                 <u>Birth Name</u>
